<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:weightSum="20"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView_Login"
        android:layout_width="150sp"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher_foreground"/>
    <TextView
        android:id="@+id/textView_Login"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:text="@string/ng_nh_p"
        android:textColor="#8632AA"
        android:textSize="30sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <TextView
            android:id="@+id/textView_Title_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ch_o_b_n_n_v_i_ch_b_t_ng_s_n"
            android:textColor="#000"
            android:textSize="20sp" />
    </LinearLayout>


    <EditText
        android:id="@+id/editText_loginEmail"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1.8"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:ems="10"
        android:hint="@string/nh_p_email_c_a_b_n"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_loginPassword"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1.8"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginBottom="20sp"
        android:ems="10"
        android:hint="@string/nh_p_m_t_kh_u_c_a_b_n"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_Login"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1.5"
        android:layout_marginLeft="70sp"
        android:layout_marginRight="70sp"
        android:background="#8632AA"
        android:text="@string/ti_p_t_c"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginTop="50sp"
        android:weightSum="3"
        android:layout_weight="1.5">
        <TextView
            android:id="@+id/textView_loginAccoutQuestion"
            android:layout_width="0sp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/ch_a_c_t_i_kho_n"
            android:textColor="#000"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/textView_linkToSignup"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/ng_k_ngay"
            android:textColor="#32B8B8"
            android:textSize="20sp" />
    </LinearLayout>




</LinearLayout>