<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:weightSum="20"
    tools:context=".Activity.SignupActivity">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="0sp"
    android:layout_weight="5"
    android:layout_gravity="center_horizontal">
    <TextView
        android:id="@+id/textView_Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ng_k"
        android:textColor="#8632AA"
        android:textSize="40sp"
        android:textStyle="bold" />
</LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <TextView
            android:id="@+id/textView_Title_Signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_gravity="center"
            android:text="@string/ng_k_tham_gia_ngay"
            android:textColor="#000"
            android:textSize="20sp" />

    </LinearLayout>
    <EditText
        android:id="@+id/editText_emailSignup"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1.8"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:ems="10"
        android:hint="@string/nh_p_email_c_a_b_n"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_signupPassword"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1.8"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:ems="10"
        android:hint="@string/t_o_m_t_kh_u_m_i"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_confirmSignupPassword"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1.8"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:ems="10"
        android:hint="@string/x_c_nh_n_m_t_kh_u"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_Signup"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1.5"
        android:layout_marginLeft="70sp"
        android:layout_marginRight="70sp"
        android:background="#8632AA"
        android:text="@string/ng_k"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginTop="50sp"
        android:weightSum="3"
        android:layout_weight="1.5">
        <TextView
            android:id="@+id/textView_signupAccoutQuestion"
            android:layout_width="0sp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/b_n_c_t_i_kho_n"
            android:textColor="#000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView_linkToLogin"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/ng_nh_p"
            android:textColor="#32B8B8"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>